compiler/testData/diagnostics/tests/duplicateJvmSignature/functionAndProperty/withErrorTypes.fir.kt
interface T {
    konst x: <!UNRESOLVED_REFERENCE!>ErrorType<!>
    fun getX(): <!UNRESOLVED_REFERENCE!>ErrorType1<!>
}